--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<div>
 			<h1><a href="http://focusit.me" title="Julien Boz">Julien Boz - Application creator</a></h1>
 			<ul>
-				<li><a href="" id="twitter" title="">Me on Twitter</a></li>
-				<li><a href="" id="dribbble" title="">Me on Dribbble</a></li>
-				<li><a href="" id="facebook" title="">Me on Facebook</a></li>
+				<li><a href="" id="twitter" title="" style="visibility: hidden;">Me on Twitter</a></li>     
+				<li><a href="" id="dribbble" title="" style="visibility: hidden;">Me on Dribbble</a></li>
+				<li><a href="" id="facebook" title="" style="visibility: hidden;">Me on Facebook</a></li>
 				<li class="divider"></li>
 				<li><a href="MAILTO:julienboz@yahoo.fr" title="" id="contact">Contact me</a></li>
 				<li><a href="https://github.com/jboz/" title="" id="github">Github</a></li>
