--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US"><head>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
+  <head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name="Author" content="Julien Boz">
 		<title>Application Creator - Julien Boz</title>
@@ -9,7 +10,7 @@
 		<meta name="robots" content="follow">
 		<meta name="description" content="The online portfolio from Julien Boz">
 		<meta name="keywords" content="application creator software development architect jee java mobile html5 css3 agile craftmanship javascript">
-	<style type="text/css"></style></head>
+	</head>
 	<body>
 		<div>
 			<h1><a href="http://focusit.me" title="Julien Boz">Julien Boz - Application creator</a></h1>
@@ -22,5 +23,18 @@
 				<li><a href="https://github.com/jboz/" title="" id="github">Github</a></li>
 			</ul>
 		</div>
-	
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-38048239-1']);
+  _gaq.push(['_setDomainName', 'focusit.me']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>	
 </body></html>
