--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<li><a href="" id="dribbble" title="" style="visibility: hidden;">Me on Dribbble</a></li>
 				<li><a href="" id="facebook" title="" style="visibility: hidden;">Me on Facebook</a></li>
 				<li class="divider"></li>
-				<li><a href="MAILTO:julienboz@yahoo.fr" title="" id="contact">Contact me</a></li>
+				<li><a href="MAILTO:julienboz [at] gmail.com" title="" id="contact">Contact me</a></li>
 				<li><a href="https://github.com/jboz/" title="" id="github">Github</a></li>
 			</ul>
 		</div>
