--- a/index.html
+++ b/index.html
@@ -1,40 +1,70 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
-  <head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8">
-		<meta name="Author" content="Julien Boz">
-		<title>Application Creator - Julien Boz</title>
-		<link href="img/favicon.png" rel="shortcut icon" type="image/png">
-		<link rel="stylesheet" type="text/css" href="css/master.css" media="screen">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
-		<meta name="robots" content="follow">
-		<meta name="description" content="The online portfolio from Julien Boz">
-		<meta name="keywords" content="application creator software development architect jee java mobile html5 css3 agile craftmanship javascript">
-	</head>
-	<body>
-		<div>
-			<h1><a href="http://focusit.me" title="Julien Boz">Julien Boz - Application creator</a></h1>
-			<ul>
-				<li><a href="" id="twitter" title="" style="visibility: hidden;">Me on Twitter</a></li>     
-				<li><a href="" id="dribbble" title="" style="visibility: hidden;">Me on Dribbble</a></li>
-				<li><a href="" id="facebook" title="" style="visibility: hidden;">Me on Facebook</a></li>
-				<li class="divider"></li>
-				<li><a href="MAILTO:julienboz [at] gmail.com" title="" id="contact">Contact me</a></li>
-				<li><a href="https://github.com/jboz/" title="" id="github">Github</a></li>
-			</ul>
-		</div>
-<script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-38048239-1']);
-  _gaq.push(['_setDomainName', 'focusit.me']);
-  _gaq.push(['_trackPageview']);
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<meta name="Author" content="Julien Boz">
+	<title>Application Creator - Julien Boz</title>
+	<link href="img/favicon.png" rel="shortcut icon" type="image/png">
+	<link rel="stylesheet" type="text/css" href="css/master.css" media="screen">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
+	<meta name="robots" content="follow">
+	<meta name="description" content="The online portfolio from Julien Boz">
+	<meta name="keywords" content="application creator software development architect team coach jee java typescript mobile html5 css3 agile craftmanship javascript ux">
+</head>
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+<body>
+	<div>
+		<h1><a href="https://focusit.fr" title="Julien Boz">Julien Boz - Application creator</a></h1>
+		<ul>
+			<li><a href="" id="twitter" title="" style="visibility: hidden;">Me on Twitter</a></li>
+			<li><a href="" id="dribbble" title="" style="visibility: hidden;">Me on Dribbble</a></li>
+			<li><a href="" id="facebook" title="" style="visibility: hidden;">Me on Facebook</a></li>
+			<li class="divider"></li>
+			<li><a href="mailto:julienboz@gmail.com" title="" id="contact">Contact me</a></li>
+			<li><a href="https://github.com/jboz/" title="" id="github">Github</a></li>
+		</ul>
+	</div>
+	<script type="application/ld+json">
+			{
+				"@context" : "http://schema.org",
+				"@type" : "ProfessionalService",
+				"name" : "Julien Boz",
+				"alternateName": "jboz",
+				"description": "Julien Boz is an application creator. Team agile coach with architect skills but developer forever.",
+				"url" : "https://www.ifocusit.fr",
+				"image" : "https://ifocusit.fr/img/focusit.png",
+				"logo" : "https://ifocusit.fr/img/focusit.png",
+				"telephone" : "06 86 70 99 93",
+				"email" : "contact@ifocusit.fr",
+				"address" : {
+					"@type" : "PostalAddress",
+					"addressCountry" : "Suisse"
+				},
+				"contactPoint": {
+					"name": "Julien Boz",
+					"email": "contact@ifocusit.fr",
+					"telephone": "+33-686709993",
+					"contactType": "customer service"
+				},
+				"openingHours": "Mo, Tu, We, Th, Fr 8:00-19:00"
+			}
+	
+		</script>
+	<script type="text/javascript">
 
-</script>	
-</body></html>
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-38048239-1']);
+		_gaq.push(['_setDomainName', 'focusit.me']);
+		_gaq.push(['_trackPageview']);
+
+		(function () {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+
+	</script>
+</body>
+
+</html>
