--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-	<meta name="Author" content="Julien Boz">
-	<title>Application Creator - Julien Boz</title>
-	<link href="img/favicon.png" rel="shortcut icon" type="image/png">
-	<link rel="stylesheet" type="text/css" href="css/master.css" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
 	<meta name="robots" content="follow">
+	<meta name="Author" content="Julien Boz">
 	<meta name="description" content="The online portfolio from Julien Boz">
 	<meta name="keywords" content="application creator software development architect team coach jee java typescript mobile html5 css3 agile craftmanship javascript ux">
+
+	<title>Application Creator - Julien Boz</title>
+	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+	<link rel="shortcut icon" href="img/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="css/master.css" media="screen">
 </head>
 
 <body>
